--- a/cities.html
+++ b/cities.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>Top cities, by population</h1>
+  <h1>Top cities, by population and Light pollution</h1>
   
   <p>
     Taken (borrowed?) from 
