--- a/cities.html
+++ b/cities.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <h1>Top cities, by population and Light pollution</h1>
+  <h1>Top cities, by population/h1>
   
   <p>
     Taken (borrowed?) from 
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>Los Angeles(too many)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
