--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Hill Spring   (242)</li>
+    <li>Flin Flon   (1346)</li>
   </ol>
 
 </body>
